2005-01-26  Chris Dunlap  <cdunlap@llnl.gov>

	* munge.spec: Added 'devel' and 'libs' subpackages.

	* munge.spec: Added version number so "rpmbuild -ta" will work.

	* munge.spec:
	  Removed %post rm of chkconfig droppings from the "-1 priority" bug.

2005-01-18  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/hash.c(hash_destroy): Fixed memory leak.

2004-12-21  Chris Dunlap  <cdunlap@llnl.gov>

	* : Released 0.4.1.

	* HISTORY, META, NEWS, TODO: Updated for 0.4.1 release.

	* munge.spec:
	  Added %post to remove chkconfig droppings from the "-1 priority" bug.

	* src/etc/munge.init:
	  Fixed bug preventing priorities from being recognized by chkconfig.

2004-12-08  Chris Dunlap  <cdunlap@llnl.gov>

	* src/munged/auth_recv.c: Added <sys/types.h> include for getpeereid().

	* NEWS: Updated v0.4 news wrt SuSE/LSB init script support.

	* JARGON: Updated URL.

2004-12-07  Chris Dunlap  <cdunlap@llnl.gov>

	* : Released 0.4.

	* HISTORY, META, NEWS, PLATFORMS: Updated for 0.4 release.

	* src/libmunge/munge.3.in, src/libmunge/munge.h,
	  src/libmunge/strerror.c: Cleaned up error codes.

	* README, src/libcommon/munge.7.in, src/libmunge/munge.3.in,
	  src/munged/munged.8.in: Tweaked verbage.

2004-12-02  Chris Dunlap  <cdunlap@llnl.gov>

	* README: Updated notes regarding creation of secret key.

	* src/etc/munge.init: Revamped for SuSE and maybe LSB.

	* configure.ac, config/x_ac_check_ssl.m4:
	  Moved X_AC_CHECK_SSL before AC_PROG_LIBTOOL to allow the
	  linker's libpath to be computed correctly under AIX.

2004-12-01  Chris Dunlap  <cdunlap@llnl.gov>

	* README: Updated info regarding /etc/sysconfig/munge.
	* munge.spec, src/etc/Makefile.am, src/etc/munge.sysconfig:
	  Added /etc/sysconfig/munge.

	* src/libmunge/enum.c(_munge_enum_lookup): Changed return type from
	  const munge_enum_table_t to munge_enum_table_t.

2004-11-30  Chris Dunlap  <cdunlap@llnl.gov>

	* config/Make-rpm.mk: Updated to reflect prior changes to META.
